// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseTreeState parses invalid structure 1`] = `
Object {
  "blocks": Array [
    Object {
      "blocks": Array [
        Object {
          "blocks": Array [],
          "key": "key-6",
          "value": Array [
            Object {
              "char": "l",
              "styles": Array [],
            },
            Object {
              "char": "l",
              "styles": Array [],
            },
            Object {
              "char": "o",
              "styles": Array [],
            },
          ],
        },
      ],
      "key": "key-5",
      "value": Array [
        Object {
          "char": "H",
          "styles": Array [],
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;

exports[`parseTreeState parses nested structure 1`] = `
Object {
  "blocks": Array [
    Object {
      "blocks": Array [
        Object {
          "blocks": Array [
            Object {
              "blocks": Array [],
              "key": "key-3",
              "value": Array [
                Object {
                  "char": "3",
                  "styles": Array [],
                },
              ],
            },
            Object {
              "blocks": Array [],
              "key": "key-4",
              "value": Array [
                Object {
                  "char": "4",
                  "styles": Array [],
                },
              ],
            },
          ],
          "key": "key-2",
          "value": Array [
            Object {
              "char": "2",
              "styles": Array [],
            },
          ],
        },
      ],
      "key": "key-1",
      "value": Array [
        Object {
          "char": "1",
          "styles": Array [],
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;

exports[`parseTreeState parses simple flat structure 1`] = `
Object {
  "blocks": Array [
    Object {
      "blocks": Array [],
      "key": "key-0",
      "value": Array [
        Object {
          "char": "H",
          "styles": Array [],
        },
        Object {
          "char": "e",
          "styles": Array [],
        },
        Object {
          "char": "l",
          "styles": Array [],
        },
        Object {
          "char": "l",
          "styles": Array [],
        },
        Object {
          "char": "o",
          "styles": Array [],
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;
